atualizando style.css

--- a/flex-projeto/style.css
+++ b/flex-projeto/style.css
@@ -1,21 +1,385 @@
 * {
   margin: 0;
+  width: 100%;
   padding: 0;
+  box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
+}
+
+:root {
+  --hue: 190;
+  --primary-color: hsl(var(--hue), 100%, 26%);
+  --headline: hsl(210, 11%, 15%);
+  --paragraph: hsl(210, 9%, 31%);
+
+  font-size: 62.5%; 
+}
+
+
+
+
+.headerMenu {
+  display: flex;
+  align-items: center;
+}
+
+.menu {
+  display: inline-flex;
+
+  align-items: center;
+
+  background-color: blueviolet;
+  height: 6.5rem;
+  color: white;
+
+  margin-bottom: 8rem;
+  padding-left: 22rem;
+  padding-right: 22rem;
+
+  width: 100%;
+}
+
+.menu h1 {
+  display: flex;
+}
+
+.listItems {
+  display: flex;
+  justify-content:right;
+  padding-right: 2rem;
+  
+}
+
+.listItems li {
+  width: fit-content;
+  color: white;
+
+}
+
+.listItems li:nth-child(2) {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  l
+}
+
+.listItems li a:hover {
+  color: black;
+}
+
+header .listItems {
+  display: flex;  
+
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  font-family: Impact;
+  font-size: 1.6rem;
+
+  text-align: center;
+
+  overflow-x: hidden;
+
+  background-color: white;
+
+}
+
+p,
+a {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.6rem;
 }
 
 ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
+  
 }
 
 ul li a {
+  color: white;
   text-decoration: none;
 }
 
-.flex-container {
+section {
+  max-width: 100%;
+}
+
+section .somosFlex {
   display: flex;
-  max-width: 992px;
-  margin: auto;
+  flex-direction: column;
+  gap: 3.2rem;
+
+}
+
+.flexContainer {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 3.2rem;
+
+  width: 80%;
+
+}
+
+.apresentacao {
+  padding-left: 8rem;
+  padding-right: 8rem;
+  text-align: left;
+  align-items: center;
+
+  margin-bottom: 5rem;
+}
+
+.textoApresentacao h1 {
+  color: blueviolet;
+  font-size: 48px;
+  margin-bottom: 10px;
+}
+
+.btn {
+  background: blueviolet;
+
+  border: none;
+  border-radius: 4rem;
+
+  margin-bottom: 6rem;
+
+  padding: 1.6rem 3.2rem;
+  width: fit-content;
+  margin-top: 3rem;
+
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-transform: uppercase;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.6rem;
+
+  transition: background 200ms;
+}
+
+.btn:hover {
+  background-color: black;
+  color: white;
+}
+
+.btn a {
+  text-decoration: none;
+  color: white;
+}
+
+.somosFlex img {
+  display: flex;
+  width: 100%;
+  min-width: 20rem;
+  overflow: hidden;
+}
+
+#quemSomos {
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#quemSomos h2 {
+  font-size: 32px;
+  color: blueviolet;
+  align-items: center;
+  display: flex;
+  margin-bottom: 20px;
+}
+
+#quemSomos h2::before {
+  content: '';
+  height: 50px;
+  width: 5px;
+  margin-right: 5px;
+  background-color: blueviolet;
+  position: relative;
+}
+
+#quemSomos p {
+  margin-bottom: 10px;
+  width: 90%;
+}
+
+#quemsomos img {
+  min-width: 420px;
+}
+
+
+
+.servicos {
+  background-color: blueviolet;
+  width: 100%;
+}
+
+#servicos {
+  flex-direction: column;
+  padding: 100px 0;
+
+  padding-top: 3rem;
+  padding-bottom: 6rem;
+
+  padding-left: 22rem;
+  padding-right: 22rem;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.stats .stat {
+  text-align: center;
+
+}
+
+.servicos H2 {
+  font-size: 4rem;
+  color: white;
+  display: flex;
+  justify-content: center;
+
+  margin-bottom: 8rem;
+}
+
+.stats p {
+  margin-top: 3rem;
+  color: white;
+  line-height: 150%;
+}
+
+.stat a {
+  color: black;
+  text-decoration: none;
+}
+
+.stat a:hover {
+  color: white;
+}
+
+.stats img {
+  display: inline-flex;
+
+  width: 50%;
+}
+
+
+#planos {
+  flex-direction: column;
+
+  display: inline-flex;
+  align-items: flex-end;
+  justify-content: center;
+
+  padding-left: 8rem;
+  padding-right: 8rem;
+}
+
+#planos h2 {
+  font-size: 4rem;
+  padding-top: 5rem;
+
+  text-align: left;
+}
+
+#planos .btn {
+  text-decoration: none;
+  color: white;
+}
+
+.listPlanos {
+  display: inline-flex;
+
+  gap: 2rem;
+  
+  align-items: flex-end;
+  justify-content: space-evenly;
+  align-content: center;
+}
+
+.plano {
+  flex: 1;
+  border: 5px solid blueviolet;
+  
+  padding: 3rem;
+  text-align: left;
+
+  max-width: 300px;
+}
+
+
+.plano h3 {
+  font-size: 3rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.plano h3::after {
+  content: "";
+
+  background-color: blueviolet;
+
+  width: 100%;
+  height: 3px;
+  margin-top: 3rem;
+  margin-bottom: 0.6rem;
+}
+
+.plano ul {
+  padding: 2rem 2rem;
+
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+}
+
+.plano ul li{
+  display: flex;
+  flex-wrap: nowrap;
+
+  align-items: center;
+}
+
+.plano ul li::before {
+  content: "";
+  width: 1rem;
+  height: 1rem;
+
+  background-color: blueviolet;
+  margin-right: 2rem;
+}
+
+footer {
+  display: flex;
+
+  height: 5rem;
+  background-color: blueviolet;
+  color: white;
+
+  align-items: center;
+  margin-top: 8rem;
+}
+
+footer a {
+  text-decoration: none;
+  color: white;
+}
+
+footer a:hover {
+  color: black;
 }
